In CSS, change .js-testimonials-container from position: aboslute to relative, prevents page jump on re-load.

--- a/css/style.sass
+++ b/css/style.sass
@@ -743,7 +743,7 @@ textarea:hover::placeholder
         overflow: hidden
 
       .js-testimonials-container
-        position: absolute
+        position: relative
         display: flex
         justify-content: space-between
         width: 200%   /* adjust depending on belt-items*/
